# photon-dance-golang-simhash

./: .gitignore  CMakeLists.txt  README.md
include/jenkins/: jenkins.h
include/simhash/: simhash.h
src/: simhash.cpp
test/: Makefile  simhash_tester.cpp
